// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AminoConverter.MsgSwapExactAmountIn 1`] = `
Object {
  "routes": Array [
    Object {
      "pool_id": "606",
      "token_out_denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
    },
  ],
  "sender": "osmo1f4vxvvvvvvvvvv3luuddddddddddcccccccccc",
  "token_in": Object {
    "amount": "10248",
    "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
  },
  "token_out_min_amount": "1000000",
}
`;

exports[`AminoConverter.MsgSwapExactAmountIn 2`] = `
Object {
  "routes": Array [
    Object {
      "poolId": "606",
      "tokenOutDenom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
    },
  ],
  "sender": "osmo1f4vxvvvvvvvvvv3luuddddddddddcccccccccc",
  "tokenIn": Object {
    "amount": "10248",
    "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
  },
  "tokenOutMinAmount": "1000000",
}
`;

exports[`AminoConverter.MsgSwapExactAmountIn 3`] = `
Object {
  "routes": Array [
    Object {
      "pool_id": "606",
      "token_out_denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
    },
  ],
  "sender": "osmo1f4vxvvvvvvvvvv3luuddddddddddcccccccccc",
  "token_in": Object {
    "amount": "10248",
    "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
  },
  "token_out_min_amount": "1000000",
}
`;
